Complete To-do-List

--- a/index.html
+++ b/index.html
@@ -68,7 +68,25 @@
 
             </div>
 
+            <div class="editModal hide">
+                <div class="top">
+                    <h2 class="m-0">Edit</h2>
+                    <button class="closeBtn">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
+                </div>
+
+                <div class="editItem">
+                    <input type="text" class="editInput">
+                </div>
+
+                <button class="editModalBtn">Edit</button>
+
+            </div>
+
         </div>
+
+        <div class="overlay hide"></div>
     </div>
     
 
