Complete To-do-List

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="alertMessage">
-                    <p class="message hide m-0"></p>
+                    <p class="message m-0"></p>
                 </div>
 
                 <div class="inputArea row g-0">
